# video_maker

./: .gitignore  .gitmodules  AGENTS.md  Makefile  director.md  generate_prompt  package-lock.json  package.json  playwright.config.ts  screenwriter.md  start-production.sh  tarot-493203-7884684a4f7d.json  veo_director.md
backend/: .env.test  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  main.py  observability.py
backend/app/agents/: audio_extractor.py  director.py  effective_clip.py  frame_porter.py  llm.py  merger.py  screenwriter.py  shot_editor.py  video_generator.py  video_trimmer.py
backend/app/api/: assets.py  debug.py  pipeline.py  projects.py  stream.py  uploads.py  voice.py
backend/app/models/: project.py  schemas.py
backend/app/services/: cosyvoice_client.py  events.py  face_calibration_client.py  first_frame.py  reference_voice.py  state_machine.py  storage.py  tail_frame_generator.py
backend/mcp_server/: README.md  __init__.py  authoring_skill.md  client.py  config.py  context.py  guidelines.py  server.py  validation.py
backend/prompts/: director.md  screenwriter.md  shot_editor.md
backend/tests/integration/: conftest.py  test_align_tail_frame_nondestructive.py  test_custom_first_frame_priority.py  test_delete_first_frame.py  test_delete_tail_frame.py  test_extract_keyframes.py  test_first_frame_init.py  test_join_preview.py  test_join_preview_trim.py  test_motion_prompt_persistence.py  test_pipeline.py  test_projects.py  test_upload_keyframes.py  (+7 more)
backend/worker/: arq_worker.py  auto_vc.py  tasks.py  vc_arq_worker.py
(+171 files in other folders)
