[project]
name = "video-maker-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "arq>=0.25",
    "redis>=5.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "google-genai>=0.3",
    "python-ffmpeg>=2.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "python-json-logger>=2.0",
    "openai>=2.31.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "coverage>=7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
